distro-3.8: compile EnhanceIO as modules

--- a/distro/archlinux/arch-i686.config
+++ b/distro/archlinux/arch-i686.config
@@ -1616,7 +1616,7 @@ CONFIG_ATA_OVER_ETH=m
 CONFIG_VIRTIO_BLK=m
 # CONFIG_BLK_DEV_HD is not set
 CONFIG_BLK_DEV_RBD=m
-CONFIG_ENHANCEIO=y
+CONFIG_ENHANCEIO=m
 
 #
 # Misc devices
