--- a/distro/archlinux/arch.config
+++ b/distro/archlinux/arch.config
@@ -1577,7 +1577,7 @@ CONFIG_XEN_BLKDEV_BACKEND=m
 CONFIG_VIRTIO_BLK=m
 # CONFIG_BLK_DEV_HD is not set
 CONFIG_BLK_DEV_RBD=m
-CONFIG_ENHANCEIO=y
+CONFIG_ENHANCEIO=m
 
 #
 # Misc devices
