--- a/distro/debian/debian.config
+++ b/distro/debian/debian.config
@@ -1658,7 +1658,7 @@ CONFIG_XEN_BLKDEV_BACKEND=m
 CONFIG_VIRTIO_BLK=m
 # CONFIG_BLK_DEV_HD is not set
 CONFIG_BLK_DEV_RBD=m
-CONFIG_ENHANCEIO=y
+CONFIG_ENHANCEIO=m
 
 #
 # Misc devices
