--- a/distro/ubuntu/ubuntu-i686.config
+++ b/distro/ubuntu/ubuntu-i686.config
@@ -1763,7 +1763,7 @@ CONFIG_XEN_BLKDEV_BACKEND=m
 CONFIG_VIRTIO_BLK=y
 # CONFIG_BLK_DEV_HD is not set
 CONFIG_BLK_DEV_RBD=m
-CONFIG_ENHANCEIO=y
+CONFIG_ENHANCEIO=m
 
 #
 # Misc devices
