distro-3.9: add bc to PKGBUILD makedepends

--- a/distro/archlinux/PKGBUILD
+++ b/distro/archlinux/PKGBUILD
@@ -3,7 +3,7 @@ pkgver=3.9.3
 pkgrel=1
 pkgdesc="pf-kernel with modules"
 arch=('i686' 'x86_64')
-makedepends=('xz' 'rsync')
+makedepends=('xz' 'rsync' 'bc')
 options=('!strip')
 license=('GPL')
 url="http://pf.natalenko.name/"
