--- a/configs/dell-vostro-3360.config
+++ b/configs/dell-vostro-3360.config
@@ -476,7 +476,7 @@ CONFIG_EFI_STUB=y
 CONFIG_SECCOMP=y
 # CONFIG_CC_STACKPROTECTOR is not set
 # CONFIG_HZ_100 is not set
-CONFIG_HZ_250=y
+CONFIG_HZ_250_NODEFAULT=y
 # CONFIG_HZ_300 is not set
 # CONFIG_HZ_1000 is not set
 CONFIG_HZ=250
